--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,116 @@
-*{
+* {
     padding: 0;
     margin: 0;
+    @font-face {
+        font-family: Call of Ops Duty;
+        src: url("path/Call of Ops Duty.otf") format("opentype");
+    }
 }
 
-h2
-{
-    color: red;
+h1, h3, .nav-link.disabled {
+    color: white;
+}
+
+#header {
+    background: #0032A0;
+    border-bottom: solid 1px white;
+}
+
+.nav-link.disabled:hover {
+    color: #007bff;
+}
+
+a:hover {
+    color: white;
+    transition: 0.3s;
+}
+
+.nav-link .fas {
+    font-size: 20px;
+    margin-right: 10px;
+    margin-top: 20px;
+}
+
+li.nav-item.login, .nav-link, .fas, .navbar-brand {
+    display: flex;
+    align-items: center;
+}
+
+.col-6.menu {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.col-3 {
+    display: flex;
+}
+
+.hero-img img {
+    width: 100%;
+    max-height: 250px;
+    height: auto;
+    object-fit: cover;
+    border-radius: 7px;
+    box-shadow: 5px 5px 4px 1px white;
+}
+
+#banner-section {
+    background-color: #0032A0;
+    height: 50vh;
+    display: flex;
+    align-items: center;
+}
+
+#dashboard {
+    margin-top: 50px;
+    height: 50vh;
+}
+
+.fas {
+    font-weight: 900;
+    font-size: 50px;
+    margin-bottom: 20px;
+}
+
+.member {
+    margin-bottom: 50px;
+    color: black;
+}
+
+button {
+    padding: 10px 15px;
+    background-color: #0032A0;
+    color: white;
+    font-weight: 500;
+    transition: 0.3s;
+}
+
+button:hover {
+    background-color: white;
+    color: #0032A0;
+    border: solid 1px;
+}
+
+#table {
+    margin-top: 50px;
+}
+
+#partners {
+    margin-top: 50px;
+    height: 30vh;
+    display: flex;
+    text-align: center;
+    background-color: #F2F2F2;
+    align-items: center;
+}
+
+.partners {
+    margin-bottom: 50px;
+}
+
+#footer {
+    background-color: #0032A0;
+    color: white;
+    padding: 20px 0 20px 0;
+    text-align-last: center;
 }
